--- a/app.yaml
+++ b/app.yaml
@@ -14,6 +14,7 @@
 
 runtime: python
 env: flex
+entrypoint: uvicorn main:app --host 0.0.0.0 --port 8080
 
 # This sample incurs costs to run on the App Engine flexible environment.
 # The settings below are to reduce costs during testing and are not appropriate
